--- a/_posts/I-8174-C-15251-RMT/2020-08-04-EnergyPlus-e27106ced37692e133037caac5af61954fc98f65-PR8175-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
+++ b/_posts/I-8174-C-15251-RMT/2020-08-04-EnergyPlus-e27106ced37692e133037caac5af61954fc98f65-PR8175-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-e27106ced37692e133037caac5af61954fc98f65-PR8175-x86_64-Linux-U
 permalink: EnergyPlus-e27106ced37692e133037caac5af61954fc98f65-PR8175-x86_64-Linux-Ubuntu-18.04-cppcheck.html
 tags: data
 layout: ci_results
-date: '2020-08-04 01:01:31'
+date: '2020-08-04 01:06:46'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,9 +29,9 @@ pull_request_issue_id: '8175'
 pull_request_base_repository: NREL/EnergyPlus
 pull_request_base_ref: develop
 device_id: x86_64-Linux-Ubuntu-18.04-cppcheck
-pending: true
+pending: false
 analyze_only: true
-build_time: 
+build_time: 312.344365061
 test_time: 
 package_time: 
 install_time: 
@@ -69,7 +69,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-e27106ced37692e133037caac5af61954fc98f65-PR8175-x86_64-Linux-Ubuntu-18.04-cppcheck.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-08-04 01:01:31",
+    "date": "2020-08-04 01:06:46",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -95,9 +95,9 @@ performance_test_count: 0
     "pull_request_base_repository": "NREL/EnergyPlus",
     "pull_request_base_ref": "develop",
     "device_id": "x86_64-Linux-Ubuntu-18.04-cppcheck",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
+    "build_time": 312.344365061,
     "test_time": null,
     "package_time": null,
     "install_time": null,
