--- a/_posts/IFOS/2020-08-05-EnergyPlus-def72f2eccf494b842b9d034f931d0fe783dc1ad-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
+++ b/_posts/IFOS/2020-08-05-EnergyPlus-def72f2eccf494b842b9d034f931d0fe783dc1ad-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-def72f2eccf494b842b9d034f931d0fe783dc1ad-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-def72f2eccf494b842b9d034f931d0fe783dc1ad-x86_64-Linux-Ubuntu-18.04-cppcheck.html
 tags: data
 layout: ci_results
-date: '2020-08-05 22:02:20'
+date: '2020-08-05 22:09:33'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,9 +29,9 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-18.04-cppcheck
-pending: true
+pending: false
 analyze_only: true
-build_time: 
+build_time: 429.847986081
 test_time: 
 package_time: 
 install_time: 
@@ -69,7 +69,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-def72f2eccf494b842b9d034f931d0fe783dc1ad-x86_64-Linux-Ubuntu-18.04-cppcheck.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-08-05 22:02:20",
+    "date": "2020-08-05 22:09:33",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -95,9 +95,9 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-18.04-cppcheck",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
+    "build_time": 429.847986081,
     "test_time": null,
     "package_time": null,
     "install_time": null,
