--- a/_posts/FCS/2020-08-06-EnergyPlus-66886ff3edb5c494af698b8b27c1cb1971d126d3-PR7988-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
+++ b/_posts/FCS/2020-08-06-EnergyPlus-66886ff3edb5c494af698b8b27c1cb1971d126d3-PR7988-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-66886ff3edb5c494af698b8b27c1cb1971d126d3-PR7988-x86_64-Linux-U
 permalink: EnergyPlus-66886ff3edb5c494af698b8b27c1cb1971d126d3-PR7988-x86_64-Linux-Ubuntu-18.04-cppcheck.html
 tags: data
 layout: ci_results
-date: '2020-08-06 01:29:39'
+date: '2020-08-06 01:36:30'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,9 +29,9 @@ pull_request_issue_id: '7988'
 pull_request_base_repository: NREL/EnergyPlus
 pull_request_base_ref: develop
 device_id: x86_64-Linux-Ubuntu-18.04-cppcheck
-pending: true
+pending: false
 analyze_only: true
-build_time: 
+build_time: 408.381389132
 test_time: 
 package_time: 
 install_time: 
@@ -69,7 +69,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-66886ff3edb5c494af698b8b27c1cb1971d126d3-PR7988-x86_64-Linux-Ubuntu-18.04-cppcheck.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-08-06 01:29:39",
+    "date": "2020-08-06 01:36:30",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -95,9 +95,9 @@ performance_test_count: 0
     "pull_request_base_repository": "NREL/EnergyPlus",
     "pull_request_base_ref": "develop",
     "device_id": "x86_64-Linux-Ubuntu-18.04-cppcheck",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
+    "build_time": 408.381389132,
     "test_time": null,
     "package_time": null,
     "install_time": null,
