--- a/_posts/AL/2020-08-13-EnergyPlus-dedd0d971668753d7e0cf6d7a493dfb1fb47e3bd-PR8070-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
+++ b/_posts/AL/2020-08-13-EnergyPlus-dedd0d971668753d7e0cf6d7a493dfb1fb47e3bd-PR8070-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-dedd0d971668753d7e0cf6d7a493dfb1fb47e3bd-PR8070-x86_64-Linux-U
 permalink: EnergyPlus-dedd0d971668753d7e0cf6d7a493dfb1fb47e3bd-PR8070-x86_64-Linux-Ubuntu-18.04-cppcheck.html
 tags: data
 layout: ci_results
-date: '2020-08-13 13:01:22'
+date: '2020-08-13 13:06:39'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,9 +29,9 @@ pull_request_issue_id: '8070'
 pull_request_base_repository: NREL/EnergyPlus
 pull_request_base_ref: develop
 device_id: x86_64-Linux-Ubuntu-18.04-cppcheck
-pending: true
+pending: false
 analyze_only: true
-build_time: 
+build_time: 314.722394672
 test_time: 
 package_time: 
 install_time: 
@@ -69,7 +69,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-dedd0d971668753d7e0cf6d7a493dfb1fb47e3bd-PR8070-x86_64-Linux-Ubuntu-18.04-cppcheck.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-08-13 13:01:22",
+    "date": "2020-08-13 13:06:39",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -95,9 +95,9 @@ performance_test_count: 0
     "pull_request_base_repository": "NREL/EnergyPlus",
     "pull_request_base_ref": "develop",
     "device_id": "x86_64-Linux-Ubuntu-18.04-cppcheck",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
+    "build_time": 314.722394672,
     "test_time": null,
     "package_time": null,
     "install_time": null,
