--- a/_posts/AMSS/2020-08-13-EnergyPlus-746eab7080e5283c8000de2de164b6caa257dcb9-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
+++ b/_posts/AMSS/2020-08-13-EnergyPlus-746eab7080e5283c8000de2de164b6caa257dcb9-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-746eab7080e5283c8000de2de164b6caa257dcb9-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-746eab7080e5283c8000de2de164b6caa257dcb9-x86_64-Linux-Ubuntu-18.04-cppcheck.html
 tags: data
 layout: ci_results
-date: '2020-08-13 15:19:14'
+date: '2020-08-13 15:25:01'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,9 +29,9 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-18.04-cppcheck
-pending: true
+pending: false
 analyze_only: true
-build_time: 
+build_time: 343.818686105
 test_time: 
 package_time: 
 install_time: 
@@ -69,7 +69,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-746eab7080e5283c8000de2de164b6caa257dcb9-x86_64-Linux-Ubuntu-18.04-cppcheck.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-08-13 15:19:14",
+    "date": "2020-08-13 15:25:01",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -95,9 +95,9 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-18.04-cppcheck",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
+    "build_time": 343.818686105,
     "test_time": null,
     "package_time": null,
     "install_time": null,
