--- a/_posts/ES/2020-08-14-EnergyPlus-5cae5166c480f9d2b4b40939afe7216082c0535f-x86_64-MacOS-10.15-clang-11.0.0-results.html
+++ b/_posts/ES/2020-08-14-EnergyPlus-5cae5166c480f9d2b4b40939afe7216082c0535f-x86_64-MacOS-10.15-clang-11.0.0-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-5cae5166c480f9d2b4b40939afe7216082c0535f-x86_64-MacOS-10.15-cl
 permalink: EnergyPlus-5cae5166c480f9d2b4b40939afe7216082c0535f-x86_64-MacOS-10.15-clang-11.0.0.html
 tags: data
 layout: ci_results
-date: '2020-08-14 16:10:44'
+date: '2020-08-14 16:29:49'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-MacOS-10.15-clang-11.0.0
-pending: true
+pending: false
 analyze_only: false
-build_time: 
-test_time: 
+build_time: 2.625956
+test_time: 1.012391
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -69,7 +69,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-5cae5166c480f9d2b4b40939afe7216082c0535f-x86_64-MacOS-10.15-clang-11.0.0.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-08-14 16:10:44",
+    "date": "2020-08-14 16:29:49",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -95,10 +95,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-MacOS-10.15-clang-11.0.0",
-    "pending": true,
+    "pending": false,
     "analyze_only": false,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 2.625956,
+    "test_time": 1.012391,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
