--- a/_posts/8057-LTRSCD/2020-08-14-EnergyPlus-8c40396f854378925186f37d6a14cdfb7c098336-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
+++ b/_posts/8057-LTRSCD/2020-08-14-EnergyPlus-8c40396f854378925186f37d6a14cdfb7c098336-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-8c40396f854378925186f37d6a14cdfb7c098336-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-8c40396f854378925186f37d6a14cdfb7c098336-x86_64-Linux-Ubuntu-18.04-cppcheck.html
 tags: data
 layout: ci_results
-date: '2020-08-14 18:56:32'
+date: '2020-08-14 19:02:36'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,9 +29,9 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-18.04-cppcheck
-pending: true
+pending: false
 analyze_only: true
-build_time: 
+build_time: 361.086792304
 test_time: 
 package_time: 
 install_time: 
@@ -69,7 +69,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-8c40396f854378925186f37d6a14cdfb7c098336-x86_64-Linux-Ubuntu-18.04-cppcheck.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-08-14 18:56:32",
+    "date": "2020-08-14 19:02:36",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -95,9 +95,9 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-18.04-cppcheck",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
+    "build_time": 361.086792304,
     "test_time": null,
     "package_time": null,
     "install_time": null,
