--- a/_posts/AL/2020-08-15-EnergyPlus-a9fea60c81ac7690f655b683548d6b0417b15bf8-PR8070-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
+++ b/_posts/AL/2020-08-15-EnergyPlus-a9fea60c81ac7690f655b683548d6b0417b15bf8-PR8070-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-a9fea60c81ac7690f655b683548d6b0417b15bf8-PR8070-x86_64-Linux-U
 permalink: EnergyPlus-a9fea60c81ac7690f655b683548d6b0417b15bf8-PR8070-x86_64-Linux-Ubuntu-18.04-cppcheck.html
 tags: data
 layout: ci_results
-date: '2020-08-15 06:55:39'
+date: '2020-08-15 07:02:20'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,9 +29,9 @@ pull_request_issue_id: '8070'
 pull_request_base_repository: NREL/EnergyPlus
 pull_request_base_ref: develop
 device_id: x86_64-Linux-Ubuntu-18.04-cppcheck
-pending: true
+pending: false
 analyze_only: true
-build_time: 
+build_time: 398.08621929
 test_time: 
 package_time: 
 install_time: 
@@ -69,7 +69,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-a9fea60c81ac7690f655b683548d6b0417b15bf8-PR8070-x86_64-Linux-Ubuntu-18.04-cppcheck.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-08-15 06:55:39",
+    "date": "2020-08-15 07:02:20",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -95,9 +95,9 @@ performance_test_count: 0
     "pull_request_base_repository": "NREL/EnergyPlus",
     "pull_request_base_ref": "develop",
     "device_id": "x86_64-Linux-Ubuntu-18.04-cppcheck",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
+    "build_time": 398.08621929,
     "test_time": null,
     "package_time": null,
     "install_time": null,
