--- a/_posts/CM/2020-12-11-EnergyPlus-9abbe800bcd7f17d78516b1343629ec2949e6d5d-x86_64-MacOS-10.15-clang-11.0.0-results.html
+++ b/_posts/CM/2020-12-11-EnergyPlus-9abbe800bcd7f17d78516b1343629ec2949e6d5d-x86_64-MacOS-10.15-clang-11.0.0-results.html
@@ -3,9 +3,9 @@ title: EnergyPlus-9abbe800bcd7f17d78516b1343629ec2949e6d5d-x86_64-MacOS-10.15-cl
 permalink: EnergyPlus-9abbe800bcd7f17d78516b1343629ec2949e6d5d-x86_64-MacOS-10.15-clang-11.0.0.html
 tags: data
 layout: ci_results
-date: '2020-12-11 05:59:24'
+date: '2020-12-11 06:23:03'
 unhandled_failure: false
-build_error_count: 0
+build_error_count: 2
 build_warning_count: 0
 package_error_count: 0
 package_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-MacOS-10.15-clang-11.0.0
-pending: true
+pending: false
 analyze_only: false
-build_time: 
-test_time: 
+build_time: 110.179663
+test_time: 1.04857
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -55,7 +55,20 @@ performance_test_count: 0
 ---
 {
   "build_results": [
-
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": "33",
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "include could not find load file:; ; cmake/Sanitizers.cmake"
+    },
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": "34",
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": ""
+    }
   ],
   "test_results": [
 
@@ -69,9 +82,9 @@ performance_test_count: 0
     "permalink": "EnergyPlus-9abbe800bcd7f17d78516b1343629ec2949e6d5d-x86_64-MacOS-10.15-clang-11.0.0.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-12-11 05:59:24",
+    "date": "2020-12-11 06:23:03",
     "unhandled_failure": false,
-    "build_error_count": 0,
+    "build_error_count": 2,
     "build_warning_count": 0,
     "package_error_count": 0,
     "package_warning_count": 0,
@@ -95,10 +108,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-MacOS-10.15-clang-11.0.0",
-    "pending": true,
+    "pending": false,
     "analyze_only": false,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 110.179663,
+    "test_time": 1.04857,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
