--- a/_posts/CM/2020-12-11-EnergyPlus-12f191af159fb5fdc0df943fb24530226ce5d045-x86_64-MacOS-10.15-clang-11.0.0-results.html
+++ b/_posts/CM/2020-12-11-EnergyPlus-12f191af159fb5fdc0df943fb24530226ce5d045-x86_64-MacOS-10.15-clang-11.0.0-results.html
@@ -3,9 +3,9 @@ title: EnergyPlus-12f191af159fb5fdc0df943fb24530226ce5d045-x86_64-MacOS-10.15-cl
 permalink: EnergyPlus-12f191af159fb5fdc0df943fb24530226ce5d045-x86_64-MacOS-10.15-clang-11.0.0.html
 tags: data
 layout: ci_results
-date: '2020-12-11 23:54:36'
+date: '2020-12-12 00:18:33'
 unhandled_failure: false
-build_error_count: 0
+build_error_count: 4
 build_warning_count: 0
 package_error_count: 0
 package_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-MacOS-10.15-clang-11.0.0
-pending: true
+pending: false
 analyze_only: false
-build_time: 
-test_time: 
+build_time: 127.970604
+test_time: 1.066137
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -55,7 +55,34 @@ performance_test_count: 0
 ---
 {
   "build_results": [
-
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": "234",
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "The source directory; ; /Users/commbldg/ci/clone_branch/third_party"
+    },
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": "287",
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "set_target_properties Can not find target to add properties to: btwxt_tests; "
+    },
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": "288",
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "set_target_properties Can not find target to add properties to: kiva_tests; "
+    },
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": "290",
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": ""
+    }
   ],
   "test_results": [
 
@@ -69,9 +96,9 @@ performance_test_count: 0
     "permalink": "EnergyPlus-12f191af159fb5fdc0df943fb24530226ce5d045-x86_64-MacOS-10.15-clang-11.0.0.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-12-11 23:54:36",
+    "date": "2020-12-12 00:18:33",
     "unhandled_failure": false,
-    "build_error_count": 0,
+    "build_error_count": 4,
     "build_warning_count": 0,
     "package_error_count": 0,
     "package_warning_count": 0,
@@ -95,10 +122,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-MacOS-10.15-clang-11.0.0",
-    "pending": true,
+    "pending": false,
     "analyze_only": false,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 127.970604,
+    "test_time": 1.066137,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
